# extract_nhmmer_tblout

./: .gitignore  Cargo.toml  README.md  test.fa
.github/workflows/: release.yml
examples/: README.md  tr.hmm  tr.hmm.h3f  tr.hmm.h3i  tr.hmm.h3m  tr.hmm.h3p  tr_ara.tbl
src/: main.rs
