[package]
name = "extract_nhmmer_tblout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["cargo"] }
hmm_tblout = "0.2.1"
noodles-fasta = "0.37.0"
tempfile = "3.10.1"
