[package]
name = "extract_nhmmer_tblout"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/ARU-life-sciences/extract_nhmmer_tblout"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["cargo"] }
flate2 = "1.1.2"
hmm_tblout = "0.2.1"
noodles-fasta = "0.37.0"
tempfile = "3.10.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
